--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,7 +26,7 @@ exec-once = ulauncher --hide-window --no-window-shadow &
 exec-once = [workspace 1; float; size 1150 750] kitty tmux
 exec-once = [workspace 2; float; size 1485 1090] google-chrome-stable --ozone-platform-hint=auto
 exec-once = [workspace 3] time-desktop
-exec-once = [workspace 3; float; size 600 1018; move 1261 97] telegram-desktop
+exec-once = [workspace 3; float; size 600 1018; move 1256 90] Telegram 
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -207,7 +207,7 @@ bind = $mainMod, O, togglesplit, # dwindle
 bind = ALT, SPACE, exec, ulauncher-toggle --no-window-shadow # Show the graphicall app launcher
 bind = $mainMod, S, exec, flameshot gui --path=$HOME/Pictures/screenshots/ --clipboard # take a screenshot
 bind = ,F12, exec, ~/scripts/macos-screenshot.sh
-bind = $mainMod SHIFT, R, exec, nmcli dev wifi rescan ; killall waybar ; waybar --config /home/alchemmist/.config/waybar/hypr-config.json --style /home/alchemmist/.config/waybar/hypr-style.css 
+bind = $mainMod SHIFT, R, exec, nmcli dev wifi rescan && killall waybar && waybar --config /home/alchemmist/.config/waybar/hypr-config.json --style /home/alchemmist/.config/waybar/hypr-style.css 
 bind = $mainMod, W, exec, ~/scripts/swww_random.sh
 bind = $mainMod SHIFT, W, exec, kitty --title wallpaper_pack_selector /home/alchemmist/scripts/wallpaper_pack_selector.sh
 bind = $mainMod, V, exec, ~/scripts/wireguard-manager.sh -t && pkill -SIGRTMIN+1 waybar
@@ -318,16 +318,10 @@ windowrulev2=move 390 135,class:^(obsidian)$
 windowrulev2=workspace 10,class:^(obsidian)$
 windowrulev2=pseudotile,class:^(obsidian)$
 
-# Telegram Desktop
-windowrulev2 = float,initialTitle:^(Telegram)$
-windowrulev2 = size 600 1018,initialTitle:^(Telegram)$
-windowrulev2 = move 1261 97,initialTitle:^(Telegram)$
-
 # Telegram Image Preview
 windowrulev2 = float,title:^(Media viewer)$
 windowrulev2 = size 1890 1145,title:^(Media viewer)$
 windowrulev2 = move 15 45,title:^(Media viewer)$
-
 
 # Syncthing
 windowrulev2 = float,title:^(Syncthing)$
