add readmes for wallpapers

--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -37,6 +37,7 @@
 "scripts/battery_stat.sh" = "/home/alchemmist/scripts/battery_stat.sh"
 "scripts/create_tex_figure.sh" = "/home/alchemmist/scripts/create_tex_figure.sh"
 "scripts/docker.sh" = "/home/alchemmist/scripts/docker.sh"
+"scripts/gen-readme-for-wlp.sh" = "/home/alchemmist/scripts/gen-readme-for-wlp.sh"
 "scripts/google-calendar.py" = "/home/alchemmist/scripts/google-calendar.py"
 "scripts/macos-screenshot.sh" = "/home/alchemmist/scripts/macos-screenshot.sh"
 "scripts/mp4-speed-up.sh" = "/home/alchemmist/scripts/mp4-speed-up.sh"
@@ -73,6 +74,7 @@
 "tmux/tmux-sessionx/sessionx.tmux" = "/home/alchemmist/.tmux/plugins/tmux-sessionx/sessionx.tmux"
 "vim/.vimrc" = "/home/alchemmist/.vimrc"
 "wallpapers/Frame 3.png" = "/home/alchemmist/Pictures/wallpapers/Frame 3.png"
+"wallpapers/README.md" = "/home/alchemmist/Pictures/wallpapers/README.md"
 "wallpapers/abstract/Uno_Xray-EF354.png" = "/home/alchemmist/Pictures/wallpapers/abstract/Uno_Xray-EF354.png"
 "wallpapers/abstract/a5b32f08-c8b4-4f73-a51d-457ad1b56686-5D96D.jpg" = "/home/alchemmist/Pictures/wallpapers/abstract/a5b32f08-c8b4-4f73-a51d-457ad1b56686-5D96D.jpg"
 "wallpapers/abstract/black_bubbles-4DE5A.png" = "/home/alchemmist/Pictures/wallpapers/abstract/black_bubbles-4DE5A.png"
@@ -158,16 +160,11 @@
 "wallpapers/cities/wallhaven-l8pjpp.png" = "/home/alchemmist/Pictures/wallpapers/cities/wallhaven-l8pjpp.png"
 "wallpapers/cities/wallhaven-rrgyz7.jpg" = "/home/alchemmist/Pictures/wallpapers/cities/wallhaven-rrgyz7.jpg"
 "wallpapers/meme/5079093.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/5079093.jpg"
-"wallpapers/meme/5079093_1.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/5079093_1.jpg"
 "wallpapers/meme/funvidia-7648B.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/funvidia-7648B.jpg"
-"wallpapers/meme/funvidia-7648B_1.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/funvidia-7648B_1.jpg"
-"wallpapers/meme/fw-0C87E.png" = "/home/alchemmist/Pictures/wallpapers/meme/fw-0C87E.png"
 "wallpapers/meme/fw-0C87E_1.png" = "/home/alchemmist/Pictures/wallpapers/meme/fw-0C87E_1.png"
-"wallpapers/meme/gruv-light-penguin-1CAF4.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/gruv-light-penguin-1CAF4.jpg"
 "wallpapers/meme/image-F8E40.png" = "/home/alchemmist/Pictures/wallpapers/meme/image-F8E40.png"
-"wallpapers/meme/linux-penguin-and-rainbow-background-imsv6hxt0e8zcl7m.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/linux-penguin-and-rainbow-background-imsv6hxt0e8zcl7m.jpg"
-"wallpapers/meme/memes-feelsbadman-pepe-meme-wallpaper-0a5efadafdd1bdb36c48865ccc2a18eb.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/memes-feelsbadman-pepe-meme-wallpaper-0a5efadafdd1bdb36c48865ccc2a18eb.jpg"
 "wallpapers/meme/memes-feelsbadman-pepe-meme-wallpaper-0a5efadafdd1bdb36c48865ccc2a18eb_1.jpg" = "/home/alchemmist/Pictures/wallpapers/meme/memes-feelsbadman-pepe-meme-wallpaper-0a5efadafdd1bdb36c48865ccc2a18eb_1.jpg"
+"wallpapers/nature/README.md" = "/home/alchemmist/Pictures/wallpapers/nature/README.md"
 "wallpapers/nature/anna-politova-teriberka-kolskii-poluostrov-korabl-utro-rassv.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/anna-politova-teriberka-kolskii-poluostrov-korabl-utro-rassv.jpg"
 "wallpapers/nature/antarktida-more-aisbergi-ldiny.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/antarktida-more-aisbergi-ldiny.jpg"
 "wallpapers/nature/arkhangelskaia-oblast-peizazh-zima-tserkov-maksim-evdokimov.jpg" = "/home/alchemmist/Pictures/wallpapers/nature/arkhangelskaia-oblast-peizazh-zima-tserkov-maksim-evdokimov.jpg"
