--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -194,8 +194,8 @@ bind = ALT SHIFT, TAB, exec, hyprswitch simple --filter-current-workspace --reve
 
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty  #open the terminal
-bind = $mainMod, K, killactive, # close the active window
+bind = $mainMod, SPACE, exec, kitty  #open the terminal
+bind = $mainMod, Q, killactive, # close the active window
 bind = , 135, exec, hyprlock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod CTRL SHIFT, M, exit # Exit Hyprland all together no (force quit Hyprland)
@@ -403,6 +403,11 @@ windowrulev2 = size 600 600,class:^(Thunar)$
 windowrulev2 = float,class:^(thunar)$
 windowrulev2 = center,class:^(thunar)$
 windowrulev2 = size 600 600,class:^(thunar)$
+
+# auth with google
+windowrulev2 = float,title:^(Sign in - Google Accounts - Google Chrome)$
+windowrulev2 = center,title:^(Sign in - Google Accounts - Google Chrome)$
+windowrulev2 = size 700 900,title:^(Sign in - Google Accounts - Google Chrome)$
 
 
 # inkscape
